# lecture-testing-task

./: .gitignore
05_hw/: CMakeLists.txt  benchmark_stack.c  main.c  stack.c  test_stack.c
